# Qbrain

./: README.md  pyproject.toml  requirements.txt
compat/: __init__.py  pennylane_compat.py  qiskit_compat.py  torch_compat.py
examples/: quick_usage_cbam.py  quick_usage_cordinate_attention.py  quick_usage_cross_attention.py  quick_usage_masked_self_attention.py  quick_usage_qcombined_encoding.py  quick_usage_qconv.py  quick_usage_qffn.py  quick_usage_qghost.py  quick_usage_qheb.py  quick_usage_qhierarchical_embedding.py  quick_usage_qlayer_normalization.py  quick_usage_qmobilenet.py  quick_usage_qpatch_merging_spliting.py  quick_usage_qpe.py  quick_usage_qram_selfattention.py  quick_usage_qsann.py  quick_usage_qse.py  quick_usage_qslot_attention.py  quick_usage_qtransformer_decoder.py  quick_usage_qtransformer_encoder.py  quick_usage_qvit.py  quick_usage_window_based_qattention.py
qcbam/: __init__.py  qcbam_core.py  utils.py
qcombined_encoding/: QCombinedEncoding.py  __init__.py  circuits.py  config.py  model.py  training.py
qconv/: QConv.py  __init__.py  attention.py  circuits.py  expectation.py  qconv_patch.py  utils.py
qcordinate_attention/: __init__.py  qcoord_attn_core.py  utils.py
qcross_attention/: __init__.py  qcross_attn_core.py  utils.py
qffn/: __init__.py  fast_quantum_layer.py  utils.py
qghost/: __init__.py  qghost_core.py  utils.py
qheb/: __init__.py  qheb_core.py  utils.py
qhierarchical_embedding/: QHierarchicalEmbedding.py  __init__.py  feature_map.py  model.py
qlayer_normalization/: QLayerNormalization.py  __init__.py  utils.py  (+2 more)
(+67 files in other folders)
